--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>SCSS finally</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Darumadrop+One&display=swap"
+            rel="stylesheet"
+        />
         <link rel="stylesheet" href="css/global.css" />
     </head>
     <body>
@@ -13,16 +25,26 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">მთავარი</a>
+                        <a href="#">Main</a>
                     </li>
                     <li>
-                        <a href="#">ჩვენს შესახებ</a>
+                        <a href="#">Home</a>
                     </li>
                     <li>
-                        <a href="#">კონტაქტი</a>
+                        <a href="#">Contact</a>
                     </li>
                 </ul>
             </nav>
         </header>
+        <section class="s-1">
+            <div class="container">
+                <div class="card-wrapper">
+                    <div class="card"><button>Send</button></div>
+                    <div class="card"><button>Send</button></div>
+                    <div class="card"><button>Send</button></div>
+                    <div class="card"><button>Send</button></div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
